set(TARGET Core)

set(CMAKE_CXX_STANDARD 20)
include(DobieHelpers)


set(SOURCES
    ee/interpreter/emotionasm.cpp
    ee/interpreter/emotiondisasm.cpp
    ee/interpreter/emotioninterpreter.cpp
    ee/interpreter/emotion_fpu.cpp
    ee/interpreter/emotion_mmi.cpp
    ee/interpreter/emotion_special.cpp
    ee/interpreter/emotion_vu0.cpp
    ee/ipu/chromtable.cpp
    ee/ipu/codedblockpattern.cpp
    ee/ipu/dct_coeff.cpp
    ee/ipu/dct_coeff_table0.cpp
    ee/ipu/dct_coeff_table1.cpp
    ee/ipu/ipu.cpp
    ee/ipu/ipu_fifo.cpp
    ee/ipu/lumtable.cpp
    ee/ipu/mac_addr_inc.cpp
    ee/ipu/mac_b_pic.cpp
    ee/ipu/mac_i_pic.cpp
    ee/ipu/mac_p_pic.cpp
    ee/ipu/motioncode.cpp
    ee/ipu/vlc_table.cpp
    ee/jit/ee_jit.cpp
    ee/jit/ee_jit64.cpp
    ee/jit/ee_jit64_cop2.cpp
    ee/jit/ee_jit64_fpu.cpp
    ee/jit/ee_jit64_fpu_avx.cpp
    ee/jit/ee_jit64_gpr.cpp
    ee/jit/ee_jit64_mmi.cpp
    ee/jit/ee_jittrans.cpp
    ee/vu/vif.cpp
    ee/vu/vu.cpp
    ee/vu/vu_disasm.cpp
    ee/vu/vu_interpreter.cpp
    ee/vu/vu_jit.cpp
    ee/vu/vu_jit64.cpp
    ee/vu/vu_jittrans.cpp
    ee/bios_hle.cpp
    ee/cop0.cpp
    ee/cop1.cpp
    ee/cop2.cpp
    ee/dmac.cpp
    ee/emotion.cpp
    ee/intc.cpp
    ee/timers.cpp
    ee/timers.cpp
    gs/gif.cpp
    gs/gs.cpp
    gs/gscontext.cpp
    gs/gsmem.cpp
    gs/gsregisters.cpp
    gs/gsthread.cpp
    iop/cdvd/bincuereader.cpp
    iop/cdvd/cdvd.cpp
    iop/cdvd/cso_reader.cpp
    iop/cdvd/iso_reader.cpp
    iop/sio2/firewire.cpp
    iop/sio2/gamepad.cpp
    iop/sio2/memcard.cpp
    iop/sio2/sio2.cpp
    iop/spu/spu.cpp
    iop/spu/spu_adpcm.cpp
    iop/spu/spu_envelope.cpp
    iop/spu/spu_interpolate.cpp
    iop/spu/spu_reverb.cpp
    iop/iop.cpp
    iop/cop0.cpp
    iop/dma.cpp
    iop/intc.cpp
    iop/interpreter/iop_interpreter.cpp
    iop/timers.cpp
    jitcommon/emitter64.cpp
    jitcommon/ir_block.cpp
    jitcommon/ir_instr.cpp
    jitcommon/jitcache.cpp
    util/audio.cpp
    util/errors.cpp
    emulator.cpp
    scheduler.cpp
    serialize.cpp
    sif.cpp)

set(HEADERS
    util/circularFIFO.hpp
    emulator.hpp
    util/errors.hpp
    gs/gif.hpp
    gs/gs.hpp
    gs/gscontext.hpp
    gs/gsmem.hpp
    gs/gsregisters.hpp
    gs/gsthread.hpp
    util/int128.hpp
    scheduler.hpp
    sif.hpp
    util/audio.hpp
    ee/bios_hle.hpp
    ee/cop0.hpp
    ee/cop1.hpp
    ee/cop2.hpp
    ee/dmac.hpp
    ee/jit/ee_jit.hpp
    ee/jit/ee_jit64.hpp
    ee/jit/ee_jittrans.hpp
    ee/emotion.hpp
    ee/interpreter/emotionasm.hpp
    ee/interpreter/emotiondisasm.hpp
    ee/interpreter/emotioninterpreter.hpp
    ee/intc.hpp
    ee/timers.hpp
    ee/vu/vif.hpp
    ee/vu/vu.hpp
    ee/vu_disasm.hpp
    ee/vu/vu_interpreter.hpp
    ee/vu/vu_jit.hpp
    ee/vu/vu_jit64.hpp
    ee/vu/vu_jittrans.hpp
    ee/ipu/chromtable.hpp
    ee/ipu/codedblockpattern.hpp
    ee/ipu/dct_coeff.hpp
    ee/ipu/dct_coeff_table0.hpp
    ee/ipu/dct_coeff_table1.hpp
    ee/ipu/ipu.hpp
    ee/ipu/ipu_fifo.hpp
    ee/ipu/lumtable.hpp
    ee/ipu/mac_addr_inc.hpp
    ee/ipu/mac_b_pic.hpp
    ee/ipu/mac_i_pic.hpp
    ee/ipu/mac_p_pic.hpp
    ee/ipu/motioncode.hpp
    ee/ipu/vlc_table.hpp
    iop/cdvd/bincuereader.hpp
    iop/cdvd/cdvd_container.hpp
    iop/cdvd/cdvd.hpp
    iop/cdvd/cso_reader.hpp
    iop/cdvd/iso_reader.hpp
    iop/cdvd/chd_reader.hpp
    iop/sio2/firewire.hpp
    iop/sio2/gamepad.hpp
    iop/iop.hpp
    iop/cop0.hpp
    iop/dma.hpp
    iop/intc.hpp
    iop/interpreter/iop_interpreter.hpp
    iop/timers.hpp
    iop/sio2/memcard.hpp
    iop/sio2/sio2.hpp
    iop/spu/spu.hpp
    iop/spu/spu_adpcm.hpp
    iop/spu/spu_envelope.hpp
    iop/spu/spu_utils.hpp
    jitcommon/emitter64.hpp
    jitcommon/ir_block.hpp
    jitcommon/ir_instr.hpp
    jitcommon/jitcache.hpp)

add_library(${TARGET} ${SOURCES} ${HEADERS})
add_library(Dobie::Core ALIAS ${TARGET})

target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(${TARGET} Threads::Threads libchdr zlib)
dobie_cxx_compile_options(${TARGET})
